# hyperRAM_controller

./: .gitignore  CMakeLists.txt  README.md  addr_decode.sv  addrmap.csv  alt_sys_init.c  bootup.sv  comp_stm.sv  gdbopxdriscv.ini  hyperram_controller.sv  hyperram_controller_hw.tcl  hyperram_controller_hw.tcl~  iobuf.sv  jamb.qsys  jamb.sopcinfo  linker.h  linker.x  memory.gdb  openhbmc_hw.tcl  run.tcl  run2.tcl  stp1.stp  stp2.stp  stp3.stp  summary.html  sys.qsys  sys.qsys.legacy  sys.sopcinfo  sys_jamb.qsys  sys_jamb.sopcinfo  system.h  top.ipregen.rpt  top.out.sdc  top.qpf  top.qsf  top.qws  top.sv  top2.sv  top_assignment_defaults.qdf  top_nativelink_simulation.rpt  (+9 more)
.qsys_edit/: controller.xml  preferences.xml
async_fifo/: async_fifo.qip  async_fifo.v  async_fifo_bb.v
ck/: ck.v
db/: .cmp.kpt  .ipregen.qmsg  add_sub_r3e.tdf  altsyncram_3524.tdf  altsyncram_3824.tdf  altsyncram_4961.tdf  altsyncram_7824.tdf  altsyncram_8824.tdf  altsyncram_9824.tdf  altsyncram_a824.tdf  altsyncram_b524.tdf  altsyncram_b824.tdf  altsyncram_c524.tdf  altsyncram_d824.tdf  altsyncram_e824.tdf  altsyncram_f524.tdf  altsyncram_f824.tdf  altsyncram_g824.tdf  altsyncram_l824.tdf  altsyncram_p724.tdf  altsyncram_ppg1.tdf  altsyncram_t424.tdf  altsyncram_t724.tdf  altsyncram_v424.tdf  cmpr_0ic.tdf  cmpr_ggc.tdf  cmpr_hgc.tdf  cmpr_jgc.tdf  cmpr_lgc.tdf  cmpr_mgc.tdf  cmpr_ngc.tdf  cmpr_ogc.tdf  cntr_0ii.tdf  cntr_1ii.tdf  cntr_2ii.tdf  cntr_3gi.tdf  cntr_3ii.tdf  cntr_4ii.tdf  cntr_5ii.tdf  cntr_6ii.tdf  (+548 more)
dq/: dq_inst.v
greybox_tmp/: cbx_args.txt
ip_upgrade_port_diff_reports/: issp.24_1.no_port_diff.rpt  jamb.24_1.no_port_diff.rpt
issp/: issp.BAK.qsys  issp.sopcinfo
jamb/: jamb.bsf  jamb.cmp  jamb.csv  jamb.html  jamb.ppf  jamb.spd  jamb.xml  jamb_bb.v  jamb_generation_previous.rpt  jamb_inst.v  jamb_inst.vhd
output_files/: top.asm.rpt  top.done  top.eda.rpt  top.fit.rpt  top.fit.summary  top.flow.rpt  top.jdi  top.jditmp  top.map.rpt  top.map.smsg  top.map.summary  top.pin  top.sld  top.sof  top.sta.rpt  top.sta.summary  top_ohbmc.flow.rpt  top_ohbmc.map.rpt  top_ohbmc.map.smsg  top_ohbmc.map.summary  topv2.asm.rpt  topv2.done  topv2.eda.rpt  topv2.fit.rpt  topv2.jdi  (+9 more)
software/app/: CMakeLists.txt  main.c
(+318 files in other folders)
